# uuid_sqlx_bug

./: Cargo.toml  README.md  insert.sql
src/: main.rs
