[package]
name = "uuid_sqlx_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.6.3", features = [
    "bigdecimal",
    "macros",
    "runtime-tokio-rustls",
    "json",
    "chrono",
    "decimal",
    "uuid",
    "mysql",
    "migrate",
    "tls",
    "offline",
    "ipnetwork",
] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
tokio = { version = "1.28.0", features = ["full"] }
